[tool.poetry]
name = "walkquest"
version = "0.1.0"
description = ""
authors = ["Andrea Maestri <16215183+andreamaestri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
cookiecutter = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
